<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MissionFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/bebasneue_regular"
            android:gravity="top"
            android:text="@string/mission"
            android:textAppearance="@style/mission"
            tools:targetApi="jelly_bean"
            android:layout_marginStart="22dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/active_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/active"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/brown"
                android:background="@drawable/button_background"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:paddingRight="100dp"
                android:paddingLeft="100dp"
                android:layout_marginBottom="30dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="40sp"
                android:fontFamily="@font/bebasneue_regular"
                android:layout_marginBottom="30dp"
                android:textAppearance="@style/mission"
                tools:targetApi="jelly_bean" />

            <Button
                android:id="@+id/game_button"
                android:layout_width="wrap_content"
                android:textColor="@color/brown"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:background="@drawable/button_background"
                android:text="@string/game"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:paddingRight="105dp"
                android:paddingLeft="105dp"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>